syntax = "proto3";
package user;
option go_package = "userproto";

message User {
    string userID = 1;
    string account = 2;
    string nickname = 3;
    string phone = 4;
    string email = 5;
    string photo = 6;
    string createdAt = 7;
    string updatedAt = 8;
}
//UserSrv 用户服务
service UserSrv {
    rpc Regist (UserRgstReq) returns (UserRgstRes);
    rpc Login (UserLgnReq) returns (UserLgnRes);
    rpc UpdatePassword (UserUpdatePswReq) returns (UserUpdatePswRes);
    rpc Logout (UserLgoReq) returns (UserLgoRes);
    rpc Status (UserStatusReq) returns (UserStatusRes);
    rpc UpdatePhone (UserUpdatePhoneReq) returns (UserUpdatePhoneRes);
    rpc UpdateNickname (UserUpdateNicknameReq) returns (UserUpdateNicknameRes);
    rpc ActiveUser (UserUpdateActiveReq) returns (UserUpdateActiveRes);
}

/*
data:
[参数-
头像：photo 
密码：password，
时间戳：timestamp，
设备ID：deviceID，
平台：platform[web,iOS,Android]，
设备名：deviceName，
应用标识：appkey]
*/
//注册请求
message UserRgstReq {
    string account = 1;//[账号]
    string data = 2;
}

/*
data：
[参数-
用户ID：userID，
时间戳：timestamp，
状态码：code，反
馈消息：message]
*/
//注册响应
message UserRgstRes {
    string account = 1;//[账号]
    string data = 2;
}

/*
data：
[参数-
密码：password，
时间戳：timestamp，
设备ID：deviceID，
平台：platform[web,iOS,Android]，
设备名：deviceName，
应用标识：appkey]
*/
//登录请求
message UserLgnReq {
    string account = 1;//[账号]
    string data = 2;
}

/*
data：
[参数-
状态码：code，
反馈消息：message，
时间戳：timestamp，
用户信息：user]
*/
//登录响应
message UserLgnRes {
    string account = 1;//[账号]
    string data = 2;
}

/*
data:
[参数-
用户ID：userID，
会话ID：sessionID ，
时间戳：timestamp，
设备ID：deviceID，
设备名：deviceName，
平台类型：platform，
应用标识：appkey，
旧密码：password，
新密码：newPsw]
*/
//更新密码请求
message UserUpdatePswReq {
    string account = 1;//[账号]
    string data = 2;
}
//更新密码响应
message UserUpdatePswRes {
    string account = 1;//[账号]
    string data = 2;//[参数-状态码：code，反馈消息：message，时间戳：timestamp]
}

/*
data:
[参数-
用户ID：userID，
会话ID：sessionID ，
时间戳：timestamp，
设备ID：deviceID，
设备名：deviceName，
平台类型：platform，
应用标识：appkey]
*/
//退出登录请求
message UserLgoReq {
    string account = 1;//[账号]
    string data = 2;
}

/*
data:
[参数-
状态码：code，
反馈消息：message，
时间戳：timestamp]
*/
//退出登录响应
message UserLgoRes {
    string account = 1;//[账号]
    string data = 2;//
}
/*
data:
[参数-
用户ID：userID，
会话ID：sessionID ，
时间戳：timestamp，
设备ID：deviceID，
设备名：deviceName，
平台类型：platform，
应用标识：appkey]
*/
message UserStatusReq {
    string account = 1;//[账号]
    string data = 2;
}

/*
data:
[参数-
状态码：code，
反馈消息：message，
时间戳：timestamp，
用户在线状态 online，
是否被禁用 active]
*/
message UserStatusRes {
    string account = 1;//[账号]
    string data = 2;
}
/*
data:
[参数-
用户ID：userID，
会话ID：sessionID，
时间戳：timestamp，
设备ID：deviceID，
设备名：deviceName，
平台类型：platform，
应用标识：appkey，
手机号：phone]
*/
message UserUpdatePhoneReq {
    string account = 1;//[账号]
    string data = 2;
}
/*
data:
[参数-
状态码：code，
反馈消息：message，
时间戳：timestamp]
*/
message UserUpdatePhoneRes {
    string account = 1;//[账号]
    string data = 2;//
}

/*
data:
[参数-
用户ID：userID，
会话ID：sessionID ，
时间戳：timestamp，
设备ID：deviceID，
设备名：deviceName，
平台类型：platform，
应用标识：appkey，
昵称：nickname]
*/
//更新昵称请求
message UserUpdateNicknameReq {
    string account = 1;//[账号]
    string data = 2;
}

/*
data:
[参数-
状态码：code，
反馈消息：message，
时间戳：timestamp]
*/
//更新昵称响应
message UserUpdateNicknameRes {
    string account = 1;//[账号]
    string data = 2;
}

/*
data:
[参数-
用户ID：userID，
会话ID：sessionID ，
时间戳：timestamp，
设备ID：deviceID，
设备名：deviceName，
平台类型：platform，
应用标识：appkey，
目标用户账号：targetAcc，
目标用户ID：targetID，
激活状态：active]
*/
message UserUpdateActiveReq {
    string account = 1;//[账号]
    string data = 2;
}

/*
data:
[参数-
状态码：code，
反馈消息：message，
时间戳：timestamp]
*/
message UserUpdateActiveRes {
    string account = 1;//[账号]
    string data = 2;
}